style.css
/* Boostrap classes */
* {
  box-sizing: border-box;
  margin:0 auto;
}

body {
    max-width: 100vh;
    height: 100vh;
    font-family: 'DM Sans', sans-serif;
    font-size: 1rem;
    font-weight: 400;
    line-height: 1.5;
    color: #212529;
    text-align: left;
    background-color: #fff;
}

p {
    margin-top: 0;
    margin-bottom: .5rem;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    margin-top: 0;
    margin-bottom: 0.5rem;
    font-weight: 500;
    line-height: 1.2;
}

h1 {
    font-size: 2.5rem;
}

h2 {
    font-size: 2rem;
}

h3 {
    font-size: 1.75rem;
}

h4 {
    font-size: 1.5rem;
}

h5 {
    font-size: 1.25rem;
}

h6 {
    font-size: 1rem;
}

.text-center {
    text-align: center !important;
}

.text-white {
    color: #fff !important;
}

.row {
    display: -ms-flexbox;
    display: flex;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
}

.container  {
    width: 100%;
    padding-right: 15px;
    padding-left: 15px;
}

.justify-content-center {
    -ms-flex-pack: center !important;
    justify-content: center !important;
}

.align-self-end {
    -ms-flex-item-align: end !important;
    align-self: flex-end !important;
}

img {
    vertical-align: middle;
    border-style: none;
}

svg{
    vertical-align: middle;
    border-style: none;
}
/* -----------------end of bootstrap classes */

.content  {
  width: 100%;
  height: 100%;
  background: url(assets/images/hector-martinez-EG49vTtKdvI-unsplash-dark.png) center / cover no-repeat ;
}

.content-row {
  height: 100%;
  padding-bottom: 15px;
}

.header-class  {
  width: 100%;
  margin-top: 55px;
}

.h1-content  {
  font-size: 3rem;
  margin-top: 15px;
  padding: 0;
  opacity: 0;
}

.heading-content-animation {
  animation: animationFrames linear 0.8s;
  animation-iteration-count: 1;
  animation-delay: 800ms;
  transform-origin: 50% 50%;
  animation-fill-mode: forwards;
}

@keyframes animationFrames{
  0% {
    transform:  translate(0px,-50px);
    opacity: 0;
  }
  15% {
    transform:  translate(0px,-25px);
  }
  30% {
    transform:  translate(0px,0px);
  }
  45% {
    transform:  translate(0px,-15px);
    opacity: 1;
  }
  60% {
    transform:  translate(0px,0px);
    opacity: 1;
  }
  75% {
    transform:  translate(0px,-5px);
    opacity: 1;
  }
  100% {
    transform:  translate(0px,0px);
    opacity: 1;
  }
}

.h2-content  {
  font-size: 1.25rem;
  margin-top: 15px;
  padding: 0;
  opacity: 0;
}

.button-container {
  margin-bottom: 40px;
  width: 100%;
}

.main-button-div  {
  transition: transform .1s linear;
  transform: scale(1);
  width: 135px;

}

.main-button-div:hover  {
  transform: scale(1.2);
}

.unwaste-btn  {
  height: 50px;
  width: 120px;
  cursor: pointer;
  font-size: 1.5rem;
  color: white;
  background: rgba(166, 233, 202, 0.8);
  box-shadow: 0px 0px 5px 3px rgba(0, 0, 0, 0.25);
  border: none;
  border-radius: 100px;
  transform: translate(-2750px);
  transition: transform 800ms cubic-bezier(0.85, 0.9, 0, 2.3);
}

/* --------------- animation styling ---------------*/
.unwaste-btn:hover  {
  transform: scale(1.5);
}

.unwaste-btn-animate  {
  animation-name: bounce-in;
  animation-duration: 800ms;
  animation-timing-function: ease-in;
  animation-delay: 1400ms;
  animation-iteration-count: 1;
  animation-fill-mode: forwards;
}

@keyframes bounce-in  {
  0%  {
    transform: translate(-275px);
  }
  30% {
    transform: translate(110px);
  }
  40% {
    transform: translate(120px);
  }
  50% {
    transform: translate(110px);
  }
  60% {
    transform: translate(0px);
  }
  70% {
    transform: translate(60px);
  }
  80% {
    transform: translate(0px);
  }
  90% {
    transform: translate(30px);
  }
  100%  {
    transform: translate(0px);
  }
}

.rotate-vert-center {
	-webkit-animation: rotate-vert-center 0.5s cubic-bezier(0.455, 0.030, 0.515, 0.955) both;
	animation: rotate-vert-center 0.5s cubic-bezier(0.455, 0.030, 0.515, 0.955) both;
}

@-webkit-keyframes rotate-vert-center {
  0% {
    opacity: 0;
    -webkit-transform: rotateY(0);
            transform: rotateY(0);
  }
  100% {
    opacity: 1;
    -webkit-transform: rotateY(360deg);
            transform: rotateY(360deg);
  }
}
@keyframes rotate-vert-center {
  0% {
    opacity: 0;
    -webkit-transform: rotateY(0);
            transform: rotateY(0);
  }
  100% {
    opacity: 1;
    -webkit-transform: rotateY(360deg);
            transform: rotateY(360deg);
  }
}

.logo {
  width: 20%;
  transform: scale(1);
}

.logo-animate {
  animation-name: grow;
  animation-duration: 800ms;
  animation-timing-function: ease-in;
  animation-iteration-count: 1;
  animation-play-state: running;
  animation-fill-mode: forwards;
}

@keyframes grow {
  0%  {
    transform: scale(0);
  }
  70%  {
    transform: scale(1.5);
  }
  80%  {
    transform: scale(.75);
  }
  90%  {
    transform: scale(1.15);
  }
  100%  {
    transform: scale(1);
  }
}

.logo-animate-spin  {
  animation-name: spin;
  animation-duration:5000ms;
  animation-timing-function: linear;
  animation-iteration-count: infinite;
}

@keyframes spin {
  0% {
    transform: rotate(0deg);
  }
  25%  {
    transform: rotate(90deg);
  }
  50%  {
    transform: rotate(180deg);
  }
  75%  {
    transform: rotate(270deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

/* ----------------------------------------End of home page CSS */
.activity-page-div  {
  padding: 3% 7%;
}

.activity-info  {
  width: 100%;
  background: rgba(255, 255, 255, 0.9);
  box-shadow: 0px 0px 5px 3px rgba(0, 0, 0, 0.25);
  border-radius: 18px;
  margin-bottom: 3%;
}

.h1-activity-content  {
  height: auto;
  font-size: 1.5rem;
  font-weight: bold;
  margin-top: 10px;
  width: 100%;
  margin-left: 15px;
  margin-right: 15px;
}


.h1-activity-content:after  {
    content: ""; /* This is necessary for the pseudo element to work. */
    display: block; /* This will put the pseudo element on its own line. */
    margin: 0 auto; /* This will center the border. */
    width: 90%; /* Change this to whatever width you want. */
    padding-top: 5px; /* This creates some space between the element and the border. */
    border-bottom: 1px dashed black; /* This creates the border. Replace black with whatever color you want. */
}

.gif-container  {
  width: 100%;
  max-height: 250px;
}

.image {
  border: 3px solid white;
  height: 100%;
  object-fit: cover;
  overflow: hidden;
  box-shadow: 0px 0px 5px 3px rgba(0, 0, 0, 0.25);
  border-radius: 18px;
}

/* ---------modal overlay styling ----------*/
.modal-overlay  {
  z-index: 1000;
  position: fixed;
  top: 0;
  height: 100%;
  width: 100%;
}

.modal-content  {
  display: flex;
  flex-wrap: wrap;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  background-color:rgba(255, 255, 255, 0.90);
  position: absolute;
  width: 90%;
  height: 90%;
  top: 5%;
  left: 5%;
  text-align: center;
}

.modal-content h2 {
  font-size: 3rem;
}
.modal-content p {
  font-size: 1rem;
}

.exit-modal {
  width: 50px;
  height: 30px;
  background-color: rgba(166, 233, 202, .8);
  border: none;
  border-radius: 50px;
}

/* --------------- media queries --------------*/
/* // Extra small devices (portrait phones, less than 576px) */
/* // No media query since this is the default in Bootstrap */
/* // Small devices (landscape phones, 576px and up) */
@media (min-width: 576px) {
  body  {
    max-width: 767px;
  }
  .h1-content {
    font-size: 3.5rem;
  }
  .h2-content {
    font-size: 1.5rem;
  }
  .content  {
  width: 100%;
  height: 100%;
  background: url(assets/images/hector-martinez-EG49vTtKdvI-unsplash-dark.png) center / cover no-repeat ;
  }
  .activity-page-div{
    width: 65%;
  }
  .logo {
    width: 20%;
  }
}

@media only screen and (max-width: 667px) and (orientation: landscape) {
  body  {
    max-height: 100vh;
    min-width: 667px;
  }
  .content  {
    width: 100%;
    height: 100%;
    background: url(assets/images/hector-martinez-EG49vTtKdvI-unsplash-dark.png) center / cover repeat ;
  }
  .header-class {
    margin-top: 5%;
  }
  .h1-content, .h2-content {
    margin: 5px auto;
  }
  .h1-content {
    font-size: 2.5rem;
  }
  .h2-content {
    font-size: 1.3rem;
  }
  .logo {
    width: 15%;
  }
  .activity-page-div  {
    width: 100%;
    padding-left: 0;
    padding-right: 0;
    padding-bottom: 0;
  }
  .activity-info  {
    flex-basis: 50%;
    margin-left: 0;
    height: auto;
  }
  .gif-container  {
    margin: 0;
    max-width: 40%;
  }
  .button-container {
    margin-bottom: 20px;
  }
  .content-row  {
    padding: 0;
  }
}

.hidden {
  display: none;
}

/* // Medium devices (tablets, 768px and up) */
@media (min-width: 768px) {
  body  {
    max-width: 991px;
    height: 100vh;
  }
  .header-class {
  display: flex;
  justify-content: center;
  text-align: center;
  background-color: rgba(0, 0, 0, 0.50);
  margin-top: 0;
  align-content: center;
  }
  .content  {
    padding: 0;
  }
  .h1-content {
    margin: 0 20px;
    font-size: 3rem;
    align-self: center;
  }
  .h2-content {
    font-size: 1.2rem;
    margin-left: 0;
    margin-right: 0;
    align-self: center;
  }
  .h1-activity-content  {
    font-size: 2rem;
  }
  .activity-info  {
    font-size: 1.3rem;
  }
  .content-row{
    justify-content: center;
    align-content: flex-start;
  }
  .logo {
    width: 60%;
    padding: 10px 0;
  }
  .logo-container {
    align-self: center;
    margin: 0;
  }
  .gif-container  {
    max-height: 325px;
  }
  .button-container  {
    position: absolute;
    bottom: 15px;
  }
}

/* // Large devices (desktops, 992px and up) */
@media (min-width: 992px) {
  body  {
    max-width: 1199px;
    height: 100vh;
  }
  .activity-page-div{
    width: 60%;
  }
  .content  {
    padding: 0;
  }
  .h1-content {
    font-size: 3.5rem;
  }
  .h2-content {
    font-size: 1.5rem;
  }
  .logo {
    width: 70%;
  }
}

/* // Extra large devices (large desktops, 1200px and up) */
@media (min-width: 1200px) {
  body  {
    max-width: 100vw;
    height: 100vh;
  }
  .h2-content {
    font-size: 1.5rem;
  }
  .activity-page-div{
    width: 50%;
  }
}

